--- a/HelloWorld.html
+++ b/HelloWorld.html
@@ -1,8 +1,8 @@
 <html>
 	<head>
-		<title>Hi There</title>
+		<title>Git Demo</title>
 	</head>
 	<body>
-		<p><font size=28> Git Demo!</font> </p>
+		<p><font size=28>Hi there!</font> </p>
 	</body>
 </html>
